--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
--ensorflow-gpu	1.15.2	
+Installer Version
+tensorflow-gpu	1.15.2
 Keras	2.3.1	
 Keras-Applications	1.0.8	
 Keras-Preprocessing	1.1.2	
